# stm32_cubemx_clean

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  components.txt  stm32-cubemx-a4988.ioc  stm32-cubemx-motor-driver.ioc  stm32l476rgtx_flash.ld
Core/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h
Core/Src/: gpio.c  main.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  tim.c
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/controller_tests/: pid_reset_tests.c  pid_tests.c
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/inc/: ref.h
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/ControllerFunctions/: pid.c
Drivers/CMSIS/DSP/Include/: arm_math.h
Drivers/CMSIS/DSP/PythonWrapper/cmsisdsp_pkg/src/: cmsismodule.h
Drivers/CMSIS/DSP/Source/ControllerFunctions/: arm_pid_init_f32.c  arm_pid_init_q15.c  arm_pid_init_q31.c  arm_pid_reset_f32.c  arm_pid_reset_q15.c  arm_pid_reset_q31.c
Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_ll_spi.h  stm32l4xx_ll_usb.h
Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_hcd.c  stm32l4xx_hal_pcd.c  stm32l4xx_ll_usb.c
app/: CMakeLists.txt
app/a4988/: CMakeLists.txt  a4988.c  a4988.h  a4988_config.h
app/components/: CMakeLists.txt
app/components/joint_task/: CMakeLists.txt  joint_manager.h
app/joint_task/: CMakeLists.txt  joint_manager.c  joint_manager.h  joint_task.c  joint_task.h
app/joint_task/motor_driver/: motor_driver.c  motor_driver_config.h
app/joint_task/pid_regulator/: pid_regulator.c
app/joint_task/rotary_encoder/: CMakeLists.txt  rotary_encoder_config.h
app/joint_task/step_motor/: step_motor.c  step_motor_config.h
app/main/: CMakeLists.txt  main.c  nvic.c  nvic.h
app/motor_driver/: CMakeLists.txt  motor_driver.c  motor_driver.h
app/motor_manager/: CMakeLists.txt  motor_manager.c  motor_manager.h
app/motor_manager/a4988/: a4988_config.h
app/motor_manager/motor_driver/: CMakeLists.txt  motor_driver_config.h
app/motor_manager/pid_regulator/: pid_regulator.c  pid_regulator_config.h
app/motor_manager/rotary_encoder/: rotary_encoder.h  rotary_encoder_config.h
app/motor_manager/step_motor/: step_motor.h
app/pid/: CMakeLists.txt  pid.c  pid.h  pid_config.h
app/pid_regulator/: CMakeLists.txt  pid_regulator.c  pid_regulator.h
app/rotary_encoder/: rotary_encoder.c  rotary_encoder.h  rotary_encoder_config.h
app/step_motor/: CMakeLists.txt  step_motor.c  step_motor.h  step_motor_config.h
cmake/stm32cubemx/: CMakeLists.txt
components/: CMakeLists.txt  components.txt
components/joint_task/: joint_manager.c  joint_task.c
cubemx/: .mxproject
main/: CMakeLists.txt  main.c
make/: build.mk  common.mk  components.mk  flash.mk  lint.mk  third_party.mk
scripts/: add_component.sh  add_components.sh  add_submodule.sh  remove_component.sh  remove_components.sh  remove_submodule.sh
stm32_cubemx/: stm32_cubemx.ioc
stm32_cubemx/cmake/: gcc-arm-none-eabi.cmake
